--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -1,4 +1,4 @@
-<div id="content" class="site-content">
+<div id="content" class="valine-content">
   
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
     <p style="font-size: 13px">
