--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -56,6 +56,7 @@
     /*Initial Variables*/
     var mashiro_option = new Object();
     var mashiro_global = new Object();
+    var dummerfu_option= new Object();
     mashiro_option.NProgressON = true;
     /* 
      * 邮箱信息之类的东西可以填在这里，这些js变量基本都作用于sakura-app.js
@@ -70,6 +71,14 @@
     mashiro_option.site_url = "<%- theme.url%>";
     mashiro_option.v_appId = "<%= theme.v_appId %>";
     mashiro_option.v_appKey = "<%= theme.v_appKey %>";
+
+    dummerfu_option.v_enableQQ="<%= theme.v_enableQQ %>";
+    dummerfu_option.v_placeholder="<%= theme.v_placeholder %>";
+    dummerfu_option.v_pageSize="<%= theme.v_pageSize %>"
+    dummerfu_option.v_path="<%= theme.v_path %>";
+    dummerfu_option.v_enjoyCDN="<%= theme.v_enjoyCDN %>"
+    dummerfu_option.v_enjoyMaps="<%- theme.v_enjoyMaps %>"
+
     mashiro_option.mathjax = "<%= theme.mathjax %>";
     mashiro_option.qq_api_url = "https://api.mashiro.top/qqinfo/";
     mashiro_option.qq_avatar_api_url = "https://api.mashiro.top/qqinfo/";
