--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -9,15 +9,30 @@
               var valine = new Valine();
               valine.init({
                 el: '#vcomments',
-                appId: "<%= theme.v_appId %>",
-                appKey: "<%= theme.v_appKey %>",
-                enableQQ: "<%= theme.v_enableQQ %>",
+                appId: "<%= theme.valine.appId %>",
+                appKey: "<%= theme.valine.appKey %>",
+                enableQQ: "<%= theme.valine.enableQQ %>",
                 path: window.location.pathname,
-                placeholder: "<%= theme.v_placeholder %>",
-                enjoyCDN: "<%= theme.v_enjoyCDN %>",
-                enjoyMaps: "<%- theme.v_enjoyMaps %>",
+                placeholder: "<%= theme.valine.placeholder %>",
               })
-              console.log('commment',"<%- theme.v_enjoyMaps %>"[0])
+              //邮箱审核机制
+              document.body.addEventListener('click', function(e) {
+              if (e.target.classList.contains('vsubmit')) {
+                  const email = document.querySelector('input[type=email]');
+                  const nick = document.querySelector('input[name=nick]');
+                  const reg = /^[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
+                  if (!email.value || !nick.value || !reg.test(email.value)) {
+                      const str = `<div class="valert text-center"><div class="vtext">请填写正确的昵称和邮箱！</div></div>`;
+                      const vmark = document.querySelector('.vmark');
+                      vmark.innerHTML = str;
+                      vmark.style.display = 'block';
+                      setTimeout(function() {
+                          vmark.style.display = 'none';
+                          vmark.innerHTML = '';
+                      }, 2500);
+                  }
+                }
+            });
           }
         </script>
         <% } %>
