--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -5523,9 +5523,7 @@ i.iconfont.down {
         display: none
     }
     
-    .post-footer,
-    .post-share,
-    .post-like {
+    .post-footer,.post-share,.post-like {
         display: none
     }
     
