--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -71,10 +71,27 @@ $(document).ready(function() {
 
 </script>
 <footer id="colophon" class="site-footer" style="position: relative;" role="contentinfo">
+  <!--壁纸切换-->
+  <div class="skin-menu no-select" id="mainskin"  style="position: fixed">
+      <div class="theme-controls row-container">
+          <ul class="menu-list">
+              <li id="white-bg" title="默认壁纸"> <i class="fa fa-television" aria-hidden="true"></i></li>
+              <li id="sakura-bg" title="随机壁纸"> <i class="iconfont icon-sakura"></i></li>
+              <li id="dark-bg" title="夜间模式"> <i class="fa fa-moon-o" aria-hidden="true"></i></li>
+              <li id="sakura" title="关于主题"></li>
+            </ul>
+      </div>
+  </div>   
+  <canvas id="night-mode-cover"></canvas> 
+    <div class="changeSkin-gear no-select">
+      <div class="keys" id="setbtn"> <span id="open-skinMenu"> 切换壁纸 | SCHEME TOOL 
+        &nbsp;<i class="iconfont icon-gear inline-block rotating"></i> </span></div>
+  </div><!--skin.end-->
   <div class="footertext" style="position: absolute;text-align: center;padding: 1.2rem 1rem 1.4rem;inset: 0;">
     <div class="copyright" style="color: #1f04049e;font-family: 'Playball';">&copy <%= date(new Date(), 'YYYY') %>
       <i class="fa fa-meetup" aria-hidden="true" target="__blank" style="color: #823333ad;"></i>dummerfu
     </div>
   </div>
   <div class="container" id="jsi-flying-fish-container"></div>
+
 </footer>
