--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -178,12 +178,10 @@
 <script src="/js/cursor.js"></script>
 <style>
   .bg-canvas{
-    /* background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160315.jpg); */
-    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160708.jpg);
-    background-position: center;
+    background: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160708.jpg) center center / cover no-repeat;;
+    /* background-position: center;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 100%; */
     opacity: 0.7;
-
   }
 </style>
