add qq mail reflect avatar

--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -78,7 +78,7 @@ $(document).ready(function() {
               <li id="white-bg" title="默认壁纸"> <i class="fa fa-television" aria-hidden="true"></i></li>
               <li id="sakura-bg" title="随机壁纸"> <i class="iconfont icon-sakura"></i></li>
               <li id="dark-bg" title="夜间模式"> <i class="fa fa-moon-o" aria-hidden="true"></i></li>
-              <li id="sakura" title="关于主题"></li>
+              <!-- <li id="sakura" title="关于主题"></li> -->
             </ul>
       </div>
   </div>   
