--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -6,6 +6,8 @@
         <div id="vcomments"></div>
         <script>
           window.onload = function(){
+            if(window.location.pathname!='/shuoshuo/')
+            {
               var valine = new Valine();
               valine.init({
                 el: '#vcomments',
@@ -15,24 +17,7 @@
                 path: window.location.pathname,
                 placeholder: "<%= theme.valine.placeholder %>",
               })
-              //邮箱审核机制
-              document.body.addEventListener('click', function(e) {
-              if (e.target.classList.contains('vsubmit')) {
-                  const email = document.querySelector('input[type=email]');
-                  const nick = document.querySelector('input[name=nick]');
-                  const reg = /^[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
-                  if (!email.value || !nick.value || !reg.test(email.value)) {
-                      const str = `<div class="valert text-center"><div class="vtext">请填写正确的昵称和邮箱！</div></div>`;
-                      const vmark = document.querySelector('.vmark');
-                      vmark.innerHTML = str;
-                      vmark.style.display = 'block';
-                      setTimeout(function() {
-                          vmark.style.display = 'none';
-                          vmark.innerHTML = '';
-                      }, 2500);
-                  }
-                }
-            });
+            }
           }
         </script>
         <% } %>
