--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -4,8 +4,31 @@
 <script type="text/javascript" src="/js/jquery.fancybox.min.js"></script>
 <script type="text/javascript" src="/js/zoom.min.js"></script>
 <script type="text/javascript" src="/js/sakura-app.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/artitalk"></script>
+<script type="text/javascript">
+  url=window.location.pathname
+  if(url!='/shuoshuo/')
+  {
+    head=document.head
+    var src1=document.createElement('script')
+    var src2=document.createElement('script')
+    src1.type = "text/javascript";
+    src2.type = "text/javascript";
+    src1.setAttribute("src","/js/av-min.3.0.4.js");
+    src2.setAttribute("src","/js/Valine.min.js");
+    head.appendChild(src1);
+    head.appendChild(src2);
+  }
+  new Artitalk({
+      appId: "Ipwy3hYofmpzH8YM1HdBoKnd-MdYXbMMI", 
+      appKey: "i7gXoRAlGyvp8NNEWntzV6KB",
+  })
+
+</script>
+<!-- <% if (url !== '/shuoshuo/'){ %>
 <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
 <script src='/js/Valine.min.js'></script>
+<% } %> -->
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
 <script async src="/js/busuanzi2.3.pure.mini.js"></script>
