--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -8992,3 +8992,22 @@ td.hljs-ln-numbers {
     padding: 5px;
     margin: 0!important;
 }
+/* 说说 */
+.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel {
+    background: linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)) 0% 0% / cover, url("https://ae01.alicdn.com/kf/H18a4b998752a4ae68b8e85d432a5aef0l.png"), url("https://ae01.alicdn.com/kf/H21b5f6b8496141a1979a33666e1074d9x.jpg") 0px 0px !important;
+    color: white !important;
+}
+.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel:after {
+    border-right-color:  rgba(255, 165, 150, 0.5) !important;
+}
+.cbp_tmtimeline>li .cbp_tmlabel {
+    background: linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)) 0% 0% / cover, url("https://ae01.alicdn.com/kf/H18a4b998752a4ae68b8e85d432a5aef0l.png"), url("https://ae01.alicdn.com/kf/H21b5f6b8496141a1979a33666e1074d9x.jpg") 0px 0px !important;
+    color: white !important;
+}
+.cbp_tmtimeline>li .cbp_tmlabel:after {
+    border-right-color:  rgba(0, 228, 255, 0.35) !important;
+}
+.at_button {
+    background: linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)) 0% 0% / cover, url("https://ae01.alicdn.com/kf/H18a4b998752a4ae68b8e85d432a5aef0l.png"), url("https://ae01.alicdn.com/kf/H21b5f6b8496141a1979a33666e1074d9x.jpg") 0px 0px !important;
+    color: white !important;
+}
