--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -1,26 +1,20 @@
-<div id="content" class="valine-content">
+<div id="content" class="twikoo-content">
   
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
-    <p style="font-size: 13px">
-      <% if (theme.valine && post.comments) { %>
-        <div id="vcomments"></div>
-        <script>
-          window.onload = function(){
-            if(window.location.pathname!='/shuoshuo/')
-            {
-              var valine = new Valine();
-              valine.init({
-                el: '#vcomments',
-                appId: "<%= theme.valine.appId %>",
-                appKey: "<%= theme.valine.appKey %>",
-                enableQQ: "<%= theme.valine.enableQQ %>",
-                path: window.location.pathname,
-                placeholder: "<%= theme.valine.placeholder %>",
+      <% if (theme.twikoo.enable && post.comments) { %>
+          <div id="twikoo" class="twikoo"></div>
+          <script>
+            console.log("comment 加载 twikoo")
+            window.onload = function(){
+              twikoo.init({
+                envId: "<%= theme.twikoo.envId %>",
+                // el: '#tcomment',
+                // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数
+                // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
               })
             }
-          }
-        </script>
-        <% } %>
+          </script>
+      <% } %>
   </article>
 </div>
 
