--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -5,30 +5,70 @@
 <script type="text/javascript" src="/js/zoom.min.js"></script>
 <script type="text/javascript" src="/js/sakura-app.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/artitalk"></script>
+<script src="/js/twikoo.0.6.0.all.min.js"></script>
 <script type="text/javascript">
   url=window.location.pathname
-  if(url!='/shuoshuo/')
+  if(url=='/shuoshuo/')
   {
-    head=document.head
-    var src1=document.createElement('script')
-    var src2=document.createElement('script')
-    src1.type = "text/javascript";
-    src2.type = "text/javascript";
-    src1.setAttribute("src","/js/av-min.3.0.4.js");
-    src2.setAttribute("src","/js/Valine.min.js");
-    head.appendChild(src1);
-    head.appendChild(src2);
+    console.log("footer artitalk")
+    new Artitalk({
+        appId: "Ipwy3hYofmpzH8YM1HdBoKnd-MdYXbMMI", 
+        appKey: "i7gXoRAlGyvp8NNEWntzV6KB",
+        atEmoji:{
+          "2233_2": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_卖萌].png",
+          "2233_3": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_吃惊].png",
+          "2233_4": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_吐魂].png",
+          "2233_5": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_喝水].png",
+          "2233_6": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_困惑].png",
+          "2233_7": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_大哭].png",
+          "2233_8": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_大笑].png",
+          "2233_9": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_委屈].png",
+          "2233_10": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_怒].png",
+          "2233_11": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_无言].png",
+          "2233_12": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_汗].png",
+          "2233_13": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_疑问].png",
+          "2233_14": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_第一].png",
+          "2233_15": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_耶].png",
+          "2233_16": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_郁闷].png",
+          
+          // hotkey 
+          "hotkey1": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/1.jpg",
+          "hotkey2": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/10.jpg",
+          "hotkey3": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/11.jpg",
+          "hotkey4": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/12.jpg",
+          "hotkey5": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/13.jpg",
+          "hotkey6": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/14.jpg",
+          "hotkey7": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/15.jpg",
+          "hotkey8": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/16.jpg",
+          "hotkey9": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/17.jpg",
+          "hotkey10": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/18.jpg",
+          "hotkey11": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/19.jpg",
+          "hotkey12": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/2.jpg",
+          "hotkey13": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/20.jpg",
+          "hotkey14": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/21.jpg",
+          "hotkey15": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/22.jpg",
+          "hotkey16": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/23.jpg",
+          "hotkey17": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/24.jpg",
+          "hotkey18": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/25.jpg",
+          "hotkey19": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/26.jpg",
+          "hotkey20": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/27.jpg",
+          "hotkey21": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/28.jpg",
+          "hotkey22": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/29.jpg",
+          "hotkey23": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/3.jpg",
+          "hotkey24": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/30.jpg",
+          "hotkey25": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/31.jpg",
+          "hotkey26": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/32.jpg",
+          "hotkey27": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/4.jpg",
+          "hotkey28": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/5.jpg",
+          "hotkey29": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/6.jpg",
+          "hotkey30": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/7.jpg",
+          "hotkey31": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/8.jpg",
+          "hotkey32": "https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/9.jpg",
+        }
+    })
   }
-  new Artitalk({
-      appId: "Ipwy3hYofmpzH8YM1HdBoKnd-MdYXbMMI", 
-      appKey: "i7gXoRAlGyvp8NNEWntzV6KB",
-  })
 
 </script>
-<!-- <% if (url !== '/shuoshuo/'){ %>
-<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-<script src='/js/Valine.min.js'></script>
-<% } %> -->
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
 <script async src="/js/busuanzi2.3.pure.mini.js"></script>
