--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="vlAWsW7Oui6CqTs72uMfOT3nrdd1nrcLvJIEi0ZJh8U" />
+  <meta name="google-site-verification" content="ul2nhVj6HNaI1d3xtFc7_eYD8Shq0bCu53fkA7a_7Bc" />
   <meta name="baidu-site-verification" content="code-rwA4WmzdEy" />
+  <meta name="baidu-site-verification" content="code-kdxgD0kLge" />
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <%
   var title = page.title;
