--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -17,6 +17,11 @@
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
     <p style="font-size: 13px">
+      加友链：
+      site-url:
+      avatar: 
+      (des:)
+    </p>
     <% if (page.links) { %>
       <div class="links">
         <% (page.links||[]).forEach(function (group, index) { %>
