--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -9002,12 +9002,19 @@ td.hljs-ln-numbers {
 }
 
 /* twikoo */
+.twikoo{
+    margin-top: 100px;
+}
+
 
 .tk-action-icon[data-v-8d454e16] svg, .tk-action-link[data-v-8d454e16] {
     fill: #ff2d55!important;
     color: #ff2d55!important;
 }
-
+.el-textarea__inner{
+    height: 150px !important;
+    max-height: 25vh !important;
+}
 .tk-icon svg {
     fill: silver!important;
 }
@@ -9033,3 +9040,40 @@ td.hljs-ln-numbers {
     background-size: cover;
     overflow: hidden;
 }
+/* 标签云 */
+.tag-cloud {
+    text-align: center;
+    margin-top: 20px;
+  }
+  .tag-cloud-title {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+  .tag-cloud-tags {
+    text-align: center;
+  }
+  .tag-cloud a {
+    display: inline-block;
+    margin: 0 0.4rem;
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 15px;
+    cursor: pointer;
+    line-height: normal;
+    padding: 5px 5px 5px 10px;
+    position: relative;
+    border-radius: 0 5px 5px 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  .tag-cloud a:hover {
+    color: #ff7242 !important;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+  }
